--- a/index.html
+++ b/index.html
@@ -410,33 +410,33 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+              <a href="https://github.com/ravi-teja-reddy-pogu/SQL_Digital_music_store_analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
+                <h3 class="heading"><a href="https://github.com/ravi-teja-reddy-pogu/SQL_Digital_music_store_analysis">Digital Music Store Data Analysis using SQL</a></h3>
                 <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 d-flex ftco-animate">
-          	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
-              </a>
-              <div class="text mt-3 float-right d-block">
+		  <div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry justify-content-end">
+			<a href="https://github.com/ravi-teja-reddy-pogu/customer_segmentation" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+			</a>
+			<div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
-              </div>
-            </div>
-          </div>
+			  <h3 class="heading"><a href="https://github.com/ravi-teja-reddy-pogu/customer_segmentation">Customer Segmentation using clustering model</a></h3>
+			  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+			</div>
+		  </div>
+		</div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/ravi-teja-reddy-pogu/PowerBi_Store_Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
+                <h3 class="heading"><a href="https://github.com/ravi-teja-reddy-pogu/PowerBi_Store_Analysis">Power BI Sales dashboard Project for Beginners</a></h3>
                 <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
               </div>
             </div>
@@ -458,12 +458,12 @@
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/ravi-teja-reddy-pogu/diwali_sales_analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/rishabhnmishra/customer_segmentation/blob/main/Customer_Segmentation-final.ipynb">Customer Segmentation using clustering model</a></h3>
-				  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+				  <h3 class="heading"><a href="https://github.com/ravi-teja-reddy-pogu/diwali_sales_analysis">Data Analysis using Python Project for Beginners</a></h3>
+				  <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
 				</div>
 			  </div>
 			</div>
