--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
             <p>Below are the sample Data Analytics projects on SQL, Python, Power BI & ML.</p>
           </div>
         </div>
-        <div class="row d-flex">
+        <div class="row d-flex justify-content-center">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
               <a href="https://github.com/ravi-teja-reddy-pogu/SQL_Digital_music_store_analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
@@ -419,7 +419,7 @@
               </div>
             </div>
           </div>
-		  <div class="col-md-4 d-flex ftco-animate">
+		  <!-- <div class="col-md-4 d-flex ftco-animate">
 			<div class="blog-entry justify-content-end">
 			<a href="https://github.com/ravi-teja-reddy-pogu/customer_segmentation" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 			</a>
@@ -429,7 +429,7 @@
 			  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
 			</div>
 		  </div>
-		</div>
+		</div> -->
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
               <a href="https://github.com/ravi-teja-reddy-pogu/PowerBi_Store_Analysis" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
@@ -467,7 +467,22 @@
 				</div>
 			  </div>
 			</div>
+		<br>
+		<div class="row d-flex justify-content-center">
+		<div class="col-md-4 d-flex ftco-animate">
+			<div class="blog-entry justify-content-end">
+			<a href="https://github.com/ravi-teja-reddy-pogu/customer_segmentation" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+			</a>
+			<div class="text mt-3 float-right d-block">
+
+			  <h3 class="heading"><a href="https://github.com/ravi-teja-reddy-pogu/customer_segmentation">Customer Segmentation using clustering model</a></h3>
+			  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
+			</div>
+		  </div>
+		</div>	
+		</div>
 		 </div>
+
 	  </div>
     </section>
 
