--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p>
-							<a href="https://drive.google.com/file/d/13TjqVYWFCAp0AqAYrk34X9dTDda6z3TB/view?usp=sharing" class="btn btn-primary py-3 px-4">Resume</a> 
+							<a href="https://drive.google.com/file/d/1ZfSIP4bNxrsmLPnzgbdDKwDwZT7l0Tw9/view?usp=sharing" class="btn btn-primary py-3 px-4">Resume</a> 
 							<a href="https://github.com/ravi-teja-reddy-pogu" class="btn btn-white btn-outline-white py-3 px-4">My works</a>
 						</p>
 		            </div>
@@ -368,8 +368,9 @@
 		</div>
 		<br>
 		
-			<div class="row">
-    			<div class="col-md-6">
+			<!-- <div class="row"> -->
+				<div class="row d-flex justify-content-center">
+    			<div class="col-md-6" style="font-size: 20px; padding: 00px;">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2019-2023</span>
     					<h2>Bachelor of Technology</h2>
@@ -378,14 +379,14 @@
     				</div>
     			</div>
 
-    			<div class="col-md-6">
+    			<!-- <div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2017-2019</span>
     					<h2>Higher Secondary School</h2>
     					<span class="position">Sri Chaitanya Jr.College Kurnool</span>
     					<p class="mt-4">Grade:96.2%.</p>
     				</div>
-				</div>
+				</div> -->
     		</div>
 
     		<div class="row justify-content-center mt-5">
@@ -466,7 +467,7 @@
 				  <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
 				</div>
 			  </div>
-			</div>
+		 </div>
 		<br>
 		<div class="row d-flex justify-content-center">
 		<div class="col-md-4 d-flex ftco-animate">
@@ -479,8 +480,8 @@
 			  <p>Developed a ML model to give various recommendations of financial products &amp; services on target customer groups.</p>
 			</div>
 		  </div>
-		</div>	
-		</div>
+	     </div>	
+	    </div>
 		 </div>
 
 	  </div>
@@ -585,7 +586,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/13TjqVYWFCAp0AqAYrk34X9dTDda6z3TB/view?usp=sharing">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1ZfSIP4bNxrsmLPnzgbdDKwDwZT7l0Tw9/view?usp=sharing">resumelink</a></p>
 	          </div>
           </div>
 
